# libsdptransform

./: CMakeLists.txt
include/: sdptransform.hpp
include/sdptransform/: sdptransform.hpp
src/: parser.cpp
